fix width issue on mobile

--- a/src/sass/components/Banner.scss
+++ b/src/sass/components/Banner.scss
@@ -1,5 +1,4 @@
 .banner {
-  min-width: 335px;
   width: 100%;
   border-radius: $small-border-radius;
   mix-blend-mode: darken;
